--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,10 +5,10 @@
   "homepage": "https://trentuniversitycomputersciencesoc.github.io/my-app",
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.1.19",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -22,8 +22,9 @@
     "react-leaflet": "^3.2.5",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "sass": "^1.49.9",
+    "save": "^2.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
